--- a/provider/pulumi/internal/codegen/read.tmpl
+++ b/provider/pulumi/internal/codegen/read.tmpl
@@ -31,7 +31,7 @@ func ({{.Name}}) Read(
 	}
 {{- end}}
 
-	client, err := newAPI(ctx, tenant, {{- if not .WithoutWorkspace}} workspace,{{end}} req.State.Metadata.Name)
+	client, err := new{{.Name | pascalCase}}API(ctx, tenant, {{- if not .WithoutWorkspace}} workspace,{{end}} req.State.Metadata.Name)
 	if err != nil {
 		return infer.ReadResponse[{{.Name}}Args, {{.Name}}State]{}, err
 	}
